src/Components/Region.css
.translation-container {
    width: 100%;
    margin-top: 24px;
    padding-bottom: 24px;
}

.translation-outer-container {
    width: 484px;
    height: 105px;
}

.translation-inner-container {
    display: flex;
    flex-direction: row;
    margin-top: 24px;
    padding: 16px;
    background-color: rgb(247, 247, 247);
    border-radius: 8px;
}

.translation-content {
    display: flex;
    flex-direction: column;
    width: 451px;
    width: 379px;
}

.translation-header {
    display: flex;
    flex-direction: row;
    color: rgb(34, 34, 34);
    font-family: 'Manrope', sans-serif;
}

.translation-icon {
    margin-left: 8px;
}

.translation-icon svg {
    width: 19px;
    height: 19px;
}

.translation-footer {
    margin-top: 8px;
    color: rgb(114, 114, 114);
    font-family: 'Manrope', sans-serif;
    font-size: 14px;
}

.translation-btn-container {
    margin: auto;
    padding-left: 24px;
}

#translation-btn {
    width: 48px;
    height: 32px;
    padding: 1px 4px;
    background-color: rgb(190, 190, 190);
    border: 1px solid rgb(190, 190, 190);
    border-radius: 32px;
    cursor: pointer;
}

#translation-btn:hover {
    background-color: #717171;
    border: 1px solid #717171;
}

.translation-inner-btn {
    position: relative;
    left: -3px;
    width: 28px;
    height: 28px;
    border-radius: 50%;
    background-color: #fff;
    border: 2px solid #fff;
}

.language-region-header {
    margin-bottom: 24px;
    font-family: 'Manrope', sans-serif;
    font-size: 21px;
    font-weight: 600;
}

.language-region-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin: -8px;
    padding: 0;
    list-style: none;
}

.language-region-list li {
    width: 20%;
    padding: 8px;
    vertical-align: top;
}

.language-region-list button {
    width: 100%;
    padding: 9px 12px;
    background-color: #fff;
    border-radius: 8px;
    outline: none;
    border: none;
    cursor: pointer;
    text-align: left;
}

.language-region-list button:hover {
    background-color: rgb(247, 247, 247);
}

.language-region-list button:focus {
    border: 1px solid #000000;
}

.language-name {
    font-size: 14px;
    font-family: 'Inter', sans-serif;
    font-weight: 400;
    line-height: 18px;
    letter-spacing: -0.25px;
    margin-bottom: 2px;
}

.language-country {
    font-size: 14px;
    color: rgb(113, 113, 113);
    letter-spacing: -0.05px;
}

